--- a/css/v2.css
+++ b/css/v2.css
@@ -95,7 +95,7 @@ body{
     }
 .white
 {
-background-image:url("img/line.jpg");
+background-image:url("https://github.com/hxy0603/hyx0603.github.io/blob/main/img/line.jpg?raw=true");
 text-align: center;
 position: absolute;
 left: 0px;
