--- a/css/v1.css
+++ b/css/v1.css
@@ -107,7 +107,7 @@ table{
 }
 .white
 {
-    background-image:url("img/line.jpg");
+    background-image:url("https://github.com/hxy0603/hyx0603.github.io/blob/main/img/line.jpg?raw=true");
     text-align: center;
     margin-left: 0px;
     margin-right: 0px;
