--- a/css/ba2.css
+++ b/css/ba2.css
@@ -96,7 +96,7 @@ table{
 }
 .white
 {
-    background-image:url("img/line.jpg");
+    background-image:url("https://github.com/hxy0603/hyx0603.github.io/blob/main/img/line.jpg?raw=true");
     text-align: center;
     position: absolute;
     left: 0px;
