--- a/css/ba1.css
+++ b/css/ba1.css
@@ -117,3 +117,16 @@ table{
     font-size: 35px;
     font-family:fantasy;
 }
+.item{
+    max-width: 100px;
+    overflow: hidden;
+    display: flex;
+    transition: .8s;
+}
+.item>pic2{
+    width: 100%;
+}
+.item:hover{
+    max-width: 200px;
+    transform: scale(1.3);
+}
