--- a/css/v2.css
+++ b/css/v2.css
@@ -105,6 +105,18 @@ z-index: auto;
 font-size: 35px;
 font-family:fantasy;
 }
+img{
+            width: 100%;
+            height: auto;
+            position: relative;
+            display: flex;
+            justify-content: center;
+        }
+  .img>home{
+             position: absolute;
+            right: 2px;
+            top: -100px;
+        }
 .item{
     max-width: 100px;
     overflow: hidden;
