--- a/css/ba2.css
+++ b/css/ba2.css
@@ -106,6 +106,18 @@ table{
     font-size: 35px;
     font-family:fantasy;
 }
+img{
+            width: 100%;
+            height: auto;
+            position: relative;
+            display: flex;
+            justify-content: center;
+        }
+  .img>home{
+             position: absolute;
+            right: 2px;
+            top: -100px;
+        }
 .item{
     max-width: 100px;
     overflow: hidden;
