--- a/css/basketball11.css
+++ b/css/basketball11.css
@@ -221,9 +221,5 @@
             max-width: 200px;
             transform: scale(1.3);
         }
-        span{
-            background-color: #A6A6D2;
-        }
-        div.cde{
-            columns: 4;text-align: center;
-        }
+        span.wor{background-color: #A6A6D2;}
+        div.cv{columns: 4;text-align: center;}
