--- a/css/v2.css
+++ b/css/v2.css
@@ -105,7 +105,7 @@ z-index: auto;
 font-size: 35px;
 font-family:fantasy;
 }
-img{
+.img{
             width: 100%;
             height: auto;
             position: relative;
