--- a/css/ba2.css
+++ b/css/ba2.css
@@ -106,7 +106,7 @@ table{
     font-size: 35px;
     font-family:fantasy;
 }
-img{
+.img{
             width: 100%;
             height: auto;
             position: relative;
