--- a/css/basketball11.css
+++ b/css/basketball11.css
@@ -1,6 +1,6 @@
 .white
         {
-            background-image:url("img/line01.jpg");
+            background-image:url("https://github.com/hxy0603/hyx0603.github.io/blob/main/img/line01.jpg?raw=true");
             height: 120px;
             z-index: auto;
             margin-left: 0px;
@@ -158,7 +158,7 @@
         }
         .white2
         {
-            background-image:url("img/line01.jpg");
+            background-image:url("https://github.com/hxy0603/hyx0603.github.io/blob/main/img/line01.jpg?raw=true");
             text-align: center;
             margin-left: 0px;
             margin-right: 0px;
