--- a/css/v2.css
+++ b/css/v2.css
@@ -115,7 +115,7 @@ font-family:fantasy;
   .img>home{
              position: absolute;
             right: 2px;
-            button: 10px;
+            top: -100px;
         }
 .item{
     max-width: 100px;
