--- a/css/basketball22.css
+++ b/css/basketball22.css
@@ -24,7 +24,7 @@
             z-index: 1;
         }
         body{
-            background-image: url("https://github.com/hxy0603/hyx0603.github.io/blob/main/img/basketballbg.png?raw=true");
+            background-image: url("img/basketballbg.png");
             background-repeat: repeat-y;
             background-position:top 122px left 600px;
             background-size: 23%;
