--- a/css/basketball11.css
+++ b/css/basketball11.css
@@ -1,6 +1,7 @@
 .white
         {
-            background-image:url("https://github.com/hxy0603/hyx0603.github.io/blob/main/img/line01.jpg?raw=true");
+            /*background-image:url("https://github.com/hxy0603/hyx0603.github.io/blob/main/img/line01.jpg?raw=true");*/
+            background-image:url("line01.jpg");
             height: 120px;
             z-index: auto;
             margin-left: 0px;
