--- a/css/ba2.css
+++ b/css/ba2.css
@@ -171,16 +171,15 @@ animation-delay: 15s;
 animation-play-state: paused;
 }
 white{
-background-image:url("https://github.com/hxy0603/hyx0603.github.io/blob/main/img/line.jpg?raw=true");
-text-align: center;
-    text-align: center;
-    position: absolute;
-    left: 0px;
-    right: 0px;
-    top: 1000px;
-    z-index: auto;
-    font-size: 35px;
-    font-family:fantasy;
+            background-image:url("https://github.com/hxy0603/hyx0603.github.io/blob/main/img/line.jpg?raw=true");
+            text-align: center;
+            position: relative;
+            left: 0px;
+            right: 0px;
+            top: 1000px;
+            z-index: auto;
+            font-size: 35px;
+            font-family:fantasy;
 }
 .img{
             width: 100%;
