--- a/css/basketball22.css
+++ b/css/basketball22.css
@@ -238,7 +238,7 @@
   animation-play-state: paused;
   }
  
-        .white2
+        .white
         {
             
             background-image:url("https://github.com/hxy0603/hyx0603.github.io/blob/main/img/line01.jpg?raw=true");
