--- a/css/v2.css
+++ b/css/v2.css
@@ -173,7 +173,7 @@ animation-play-state: paused;
 {
 background-image:url("https://github.com/hxy0603/hyx0603.github.io/blob/main/img/line.jpg?raw=true");
 text-align: center;
-            position: relative;
+position: absolute;
             left: 0px;
             right: 0px;
     top: 1000px;
