--- a/css/ba2.css
+++ b/css/ba2.css
@@ -173,10 +173,10 @@ animation-play-state: paused;
 white{
             background-image:url("https://github.com/hxy0603/hyx0603.github.io/blob/main/img/line.jpg?raw=true");
             text-align: center;
-            position: relative;
+position: absolute;
             left: 0px;
             right: 0px;
-            top: 1000px;
+    top: 1000px;
             z-index: auto;
             font-size: 35px;
             font-family:fantasy;
