--- a/css/basketball22.css
+++ b/css/basketball22.css
@@ -1,6 +1,6 @@
 .white
         {
-            background-image:url("https://github.com/hxy0603/hyx0603.github.io/blob/main/img/line01.jpg?raw=true");
+            background-image:url("https://github.com/hxy0603/hyx0603.github.io/blob/main/img/line01.jpg?raw=true");       
             height: 120px;
             z-index: auto;
             margin-left: 0px;
@@ -238,15 +238,12 @@
   animation-play-state: paused;
   }
  
-        .white
+        .white2
         {
-            
             background-image:url("https://github.com/hxy0603/hyx0603.github.io/blob/main/img/line01.jpg?raw=true");
             text-align: center;
-            position: relative;
-            left: 0px;
-            right: 0px;
-            top: 400px;
+            margin-left: 0px;
+            margin-right: 0px;
             z-index: auto;
             font-size: 35px;
             font-family:fantasy;
