--- a/css/basketball22.css
+++ b/css/basketball22.css
@@ -244,6 +244,7 @@
             text-align: center;
             margin-left: 0px;
             margin-right: 0px;
+                margin-top: 0px;
             z-index: auto;
             font-size: 35px;
             font-family:fantasy;
