--- a/css/basketball22.css
+++ b/css/basketball22.css
@@ -244,7 +244,8 @@
              text-align: center;
             margin-left: 0px;
             margin-right: 0px;
-                bottom:5px;
+             position: absolute;
+            top: 320px;
             z-index: auto;
             font-size: 35px;
             font-family:fantasy;
