--- a/css/v1.css
+++ b/css/v1.css
@@ -1,6 +1,6 @@
 body{
 
-    background: url(img/v3.png);
+    background: url(https://github.com/hxy0603/hyx0603.github.io/blob/main/img/v3.png?raw=true);
     background-repeat:no-repeat;
     background-position:top 400px left 650px;
     background-size:25%;
