--- a/css/ba2.css
+++ b/css/ba2.css
@@ -1,5 +1,5 @@
 body{
-    background: url(img/ba4.png);
+    background: url(https://github.com/hxy0603/hyx0603.github.io/blob/main/img/ba4.png?raw=true);
     background-repeat:no-repeat;
     background-position:top 400px left 550px;
     background-size:30%;
