--- a/css/basketball22.css
+++ b/css/basketball22.css
@@ -248,7 +248,7 @@
             font-size: 35px;
             font-family:fantasy;
                 position:relative;
-                bottom:5px;
+                top:320px;
         }
         .img{
             width: 100%;
