--- a/css/basketball22.css
+++ b/css/basketball22.css
@@ -244,11 +244,11 @@
               text-align: center;
             margin-left: 0px;
             margin-right: 0px;
-            z-index: 1;
+            z-index: auto;
             font-size: 35px;
             font-family:fantasy;
                 position:relative;
-                top:320px;
+                top:360px;
         }
         .img{
             width: 100%;
