--- a/css/basketball22.css
+++ b/css/basketball22.css
@@ -244,7 +244,7 @@
              text-align: center;
             margin-left: 0px;
             margin-right: 0px;
-            z-index: auto;
+            z-index: 1;
             font-size: 35px;
             font-family:fantasy;
             position:absolute;
@@ -262,6 +262,7 @@
            position: absolute;
             right: 2px;
             top: 320px;
+          z-index:2;
         }
         .item
         {
