--- a/css/ba2.css
+++ b/css/ba2.css
@@ -172,16 +172,17 @@ animation-play-state: paused;
 }
 white{
             background-image:url("https://github.com/hxy0603/hyx0603.github.io/blob/main/img/line.jpg?raw=true");
-            text-align: center;
+           text-align: center;
 position: absolute;
             left: 0px;
             right: 0px;
-    top: 1000px;
+    top: 1100px;
             z-index: auto;
             font-size: 35px;
             font-family:fantasy;
-}
-.img{
+               
+        }
+        .img{
             width: 100%;
             height: auto;
             position: relative;
@@ -189,20 +190,25 @@ position: absolute;
             justify-content: center;
         }
   .img>home{
-             position: absolute;
+           position: absolute;
             right: 2px;
-            top: -100px;
+            top: 320px;
+          z-index:2;
         }
-.item{
-    max-width: 100px;
-    overflow: hidden;
-    display: flex;
-    transition: .8s;
-}
-.item>pic2{
-    width: 100%;
-}
-.item:hover{
-    max-width: 200px;
-    transform: scale(1.3);
-}
+        .item
+        {
+            max-width: 100px;
+            overflow: hidden;
+            display: flex;
+            transition: .8s;
+            
+        }
+        .item>img
+        {
+            width: 100%;
+        }
+        .item:hover
+        {
+            max-width: 200px;
+            transform: scale(1.3);
+        }
