--- a/css/ba2.css
+++ b/css/ba2.css
@@ -170,7 +170,7 @@ animation-delay: 15s;
 -webkit-animation-play-state: paused;
 animation-play-state: paused;
 }
-white{
+.white{
             background-image:url("https://github.com/hxy0603/hyx0603.github.io/blob/main/img/line.jpg?raw=true");
            text-align: center;
 position: absolute;
