--- a/css/ba2.css
+++ b/css/ba2.css
@@ -176,7 +176,7 @@ animation-play-state: paused;
 position: absolute;
             left: 0px;
             right: 0px;
-    top: 1100px;
+    top: 1000x;
             z-index: auto;
             font-size: 35px;
             font-family:fantasy;
