--- a/css/ba2.css
+++ b/css/ba2.css
@@ -190,9 +190,9 @@ position: absolute;
             justify-content: center;
         }
   .img>home{
-             position: absolute;
-            right: 4px;
-            top: 355px;
+             position: relative;
+            right: -740px;
+            top: 500px;
         }
         .item
         {
