--- a/css/ba2.css
+++ b/css/ba2.css
@@ -172,15 +172,13 @@ animation-play-state: paused;
 }
 .white{
             background-image:url("https://github.com/hxy0603/hyx0603.github.io/blob/main/img/line.jpg?raw=true");
-           text-align: center;
-position: absolute;
+            position: absolute;
             left: 0px;
             right: 0px;
-    top: 1000x;
+            top: 1100px;
             z-index: auto;
             font-size: 35px;
             font-family:fantasy;
-               
         }
         .img{
             width: 100%;
