--- a/css/v2.css
+++ b/css/v2.css
@@ -190,10 +190,13 @@ position: absolute;
             justify-content: center;
         }
   .img>home{
-           position: absolute;
+      position: relative;
+            right: -740px;
+            top: 500px;
+           /*position: absolute;
             right: 2px;
             top: 380px;
-          z-index:2;
+          z-index:2;*/
         }
         .item
         {
