--- a/css/ba2.css
+++ b/css/ba2.css
@@ -172,6 +172,7 @@ animation-play-state: paused;
 }
 .white{
             background-image:url("https://github.com/hxy0603/hyx0603.github.io/blob/main/img/line.jpg?raw=true");
+            text-align: center;
             position: absolute;
             left: 0px;
             right: 0px;
