--- a/css/v2.css
+++ b/css/v2.css
@@ -190,13 +190,10 @@ position: absolute;
             justify-content: center;
         }
   .img>home{
-      position: relative;
-            right: -740px;
-            top: 500px;
-           /*position: absolute;
+      position: absolute;
             right: 2px;
-            top: 380px;
-          z-index:2;*/
+            top: 530px;
+          z-index:2;
         }
         .item
         {
